--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -10,7 +10,7 @@ label {
 }
 
 /**
- * Dispositivos medios para arriba
+ * Small devices (tablets) up
  */
 @media (min-width: 768px) {
     .form-inline .input-group .input-group-btn {
@@ -49,24 +49,33 @@ label {
     text-align: right !important;
 }
 
-.metrics-container {
+.metrics-container,
+#compara .panel-title {
     color: #ffffff;
 }
 
-.metrics-container .presupuesto-actual {
+.metrics-container .presupuesto-actual,
+#compara .panel.presupuesto-actual .panel-heading {
     background: #047d99;
 }
 
-.metrics-container .habitantes {
+.metrics-container .habitantes,
+#compara .panel.habitantes .panel-heading {
     background: #0b2f47;
 }
 
-.metrics-container .ingreso-total {
+.metrics-container .ingreso-total,
+#compara .panel.ingreso-total .panel-heading {
     background: #1b95e0;
 }
 
-.metrics-container .gasto-total {
+.metrics-container .gasto-total,
+#compara .panel.gasto-total .panel-heading {
     background: #a7d270;
+}
+
+#compara .panel-heading {
+    text-align: center;
 }
 
 .metric-container {
@@ -114,10 +123,14 @@ label {
     max-width: 190px;
 }
 
+#compara .municipalidad-select-right {
+    margin-bottom: 20px;
+}
+
 /**
- * Dispositivos pequeños para abajo
+ * Extra small devices (phones) down
  */
-@media (max-width: 467px) {
+@media (max-width: 767px) {
     #municipalidad-picking-label {
         text-align: left;
         margin: 0px;
@@ -134,5 +147,14 @@ label {
     .app-graphics-municipio-data-table table,
     .ranking-data-table table {
         table-layout: auto;
+    }
+
+    #compara .municipalidad-select-right {
+        text-align: right;
+        margin-top: 10px;
+    }
+
+    #compara .panel-body > div > div:last-child {
+        text-align: right;
     }
 }
